--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
+    "p5": "^1.5.0",
+    "pixi.js": "^7.0.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-pixi-fiber": "^1.0.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.188",
+    "@types/p5": "^1.4.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "sass": "^1.56.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
