--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "fontfaceobserver": "^2.3.0",
+    "keycode-js": "^3.1.0",
     "lodash": "^4.17.21",
     "p5": "^1.5.0",
     "pixi.js": "^7.0.4",
